--- a/style.css
+++ b/style.css
@@ -86,11 +86,18 @@ body* {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back .2s ;
 }
 
+
 .light #switch button {
-  right: 0;
-  left: initial;
+ animation: slide-in 0.4s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
+  
 }
 
 #switch span {
@@ -177,4 +184,22 @@ footer a:hover {
   background: rgba(255, 255, 255, 0.2);
   padding: 1px;
   backdrop-filter: blur(50%);
+}
+
+@keyframes slide-in{
+ from{
+  laft: 0;
+ }
+ to {
+  left: 50%;
+ }
+}
+
+@keyframes slide-back {
+  from{
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
 }
